--- a/github/src/main/resources/application.yml
+++ b/github/src/main/resources/application.yml
@@ -27,6 +27,110 @@ github:
   resource:
     userInfoUri: https://api.github.com/user
 
+#token: BASEURL/oauth/token
+#authorization : BASEURL/oauth/authorize
+#_example_ given BASEURL https://auth.o2wifi.net.uk/identity-service
+
+# curl https://auth.o2wifi.net.uk/identity-service/oauth/token -d "grant_type=client_credentials" -i -X POST -u CLIENT_ID:CLIENT_SECRET
+
+#curl https://auth.o2wifi.net.uk/identity-service/oauth/token -d "grant_type=client_credentials" -i -X POST -u api-console-untrusted:013955b6-dcb8-4803-b196-54d50f851807
+
+#curl -k "https://auth.o2wifi.net.uk/identity-service/oauth/check_token" --data "token=YOUR_TOKEN"
+#{"scope":["read","write"],"exp":1473274558,"authorities":["ROLE_TRUSTED_CLIENT","ROLE_CLIENT"],"client_id":"merlin-trusted-client"}
+
+
+
+
+#http://172.16.10.45:8080/identity-service
+
+
+
+
+o2wifi:
+  client:
+    clientId: api-console-untrusted
+    clientSecret: 013955b6-dcb8-4803-b196-54d50f851807
+
+#    accessTokenUri: https://auth.o2wifi.net.uk/identity-service/oauth/check_token
+#Authentication Failed: Could not obtain access token
+
+    userAuthorizationUri: http://172.16.10.45:8080/identity-service/oauth/authorize
+#    userAuthorizationUri: https://auth.o2wifi.net.uk/identity-service/oauth/check_token
+
+    accessTokenUri: http://172.16.10.45:8080/identity-service/oauth/token
+
+
+    scope: read
+
+    tokenName: authorization_code
+
+#   header query form none
+#    clientAuthenticationScheme: form
+    clientAuthenticationScheme: form
+  resource:
+#    userInfoUri: http://172.16.10.45:8080/reporting-api/rest/all/me
+#    userInfoUri: http://172.16.10.45:8080/reporting-api
+#    userInfoUri: http://172.16.10.45:8080/identity-service/oauth/check_token
+#    userInfoUri: http://172.16.10.45:8080/identity-service/oauth/authorize
+
+#    userInfoUri: http://172.16.10.45:8080/identity-service/account/me
+    userInfoUri: http://172.16.10.45:8080/identity-service/oauth/check_token
+
+
 logging:
   level:
     org.springframework.security: DEBUG
+    org.springframework.ws.client.MessageTracing : TRACE
+    org.springframework.ws.server.MessageTracing : TRACE
+    org.springframework.http.client : TRACE
+
+
+google:
+  client:
+    clientId: 900943153420-kvphbr8b8d0b80u1pp7ddqmqvep5ablq.apps.googleusercontent.com
+    clientSecret: RqJvP2YItzlr-hk5uBm09Mfn
+
+# Exchange authorization code for tokens
+    userAuthorizationUri: https://accounts.google.com/o/oauth2/v2/auth
+
+    accessTokenUri: https://www.googleapis.com/oauth2/v4/token
+
+    scope: profile email
+
+    clientAuthenticationScheme: form
+
+    tokenName: authorization_code
+
+  resource:
+    userInfoUri: https://www.googleapis.com/oauth2/v3/userinfo
+
+
+sparklr:
+  client:
+#    clientId: my-trusted-client
+    clientId: my-client-with-registered-redirect
+    clientSecret: 013955b6-dcb8-4803-b196-54d50f851807
+
+#    accessTokenUri: https://auth.o2wifi.net.uk/identity-service/oauth/check_token
+#Authentication Failed: Could not obtain access token
+
+    userAuthorizationUri: http://localhost:8090/oauth/authorize
+#    userAuthorizationUri: https://auth.o2wifi.net.uk/identity-service/oauth/check_token
+
+    accessTokenUri: http://localhost:8090/oauth/token
+
+#    tokenName: password
+
+#   header query form none
+#    clientAuthenticationScheme: form
+    clientAuthenticationScheme: form
+
+  resource:
+#    userInfoUri: http://172.16.10.45:8080/reporting-api/rest/all/me
+#    userInfoUri: http://172.16.10.45:8080/reporting-api
+#    userInfoUri: http://localhost:8090/auth
+    userInfoUri: http://localhost:8090/oauth/check_token
+
+#    userInfoUri: http://172.16.10.45:8080/identity-service/oauth/authorize
+
+#
